--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
-Flask==0.10.1
-Jinja2==2.7.2
-MarkupSafe==0.23
-Pygments==1.6
-Sphinx==1.2.2
-Werkzeug==0.9.4
-amqp==1.4.5
-anyjson==0.3.3
-billiard==3.3.0.17
-celery==3.1.10
-click==0.7
-docutils==0.11
+celery[redis]==3.1.10
 elasticsearch==1.0.0
-itsdangerous==0.24
-kombu==3.0.16
+click==0.7
+Flask==0.10.1
 lxml==3.3.5
-pytz==2014.3
-redis==2.9.1
-requests==2.3.0
-six==1.6.1
+requests==2.2.1
+Sphinx==1.2.2
 sphinxcontrib-httpdomain==1.2.1
-urllib3==1.8.2
-wsgiref==0.1.2
+sphinx-rtd-theme==0.1.6
