--- a/docker/ocd-python/Dockerfile
+++ b/docker/ocd-python/Dockerfile
@@ -1,11 +1,10 @@
 FROM ubuntu:precise
 MAINTAINER Lex Slaghuis <lex@openstate.eu>
-#RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
 RUN apt-get update
 RUN apt-get -q -y upgrade
 
-#timezones 
-#RUN echo 'Europe/Amsterdam' > /etc/timezone
+#Set local server timezone
+#ADD /etc/timezone  /etc/timezone
 
 RUN apt-get -q -y install libxml2-dev libxslt1-dev python-dev
 RUN apt-get -q -y install python-pip
@@ -25,6 +24,4 @@ VOLUME ["/mnt/data"]
 ADD start-celery.sh /start-celery.sh
 RUN chmod 755 /start-celery.sh
 
-RUN apt-get -q -y install joe
-
-CMD ["/bin/bash", "/bin/sh /start-celery.sh", "/bin/sh"]
+CMD ["/bin/bash", "/bin/sh /start-celery.sh"]
