--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ elasticsearch==1.0.0
 click==2.1
 Flask==0.10.1
 lxml==3.3.5
-requests==2.2.1
+requests==2.3.0
+ndg-httpsclient==0.3.2
+pyOpenSSL==0.14
+pyasn1==0.1.7
 Sphinx==1.2.2
 sphinxcontrib-httpdomain==1.2.1
 sphinx-rtd-theme==0.1.6
