--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 celery[redis]==3.1.10
 elasticsearch==1.0.0
 click==2.1
+coverage==4.0a1
 Flask==0.10.1
 lxml==3.3.5
 requests==2.3.0
+mock==1.0.1
 ndg-httpsclient==0.3.2
+nose==1.3.4
 pyOpenSSL==0.14
 pyasn1==0.1.7
 Sphinx==1.2.2
