--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.10.1
 lxml==3.3.5
 requests==2.3.0
 mock==1.0.1
+msgpack-python==0.4.2
 ndg-httpsclient==0.3.2
 nose==1.3.4
 pyOpenSSL==0.14
