Fixed merge conflict induced error, and added resolve_thumbnail event

--- a/es_mappings/ocd_mapping_usage_logs.json
+++ b/es_mappings/ocd_mapping_usage_logs.json
@@ -192,6 +192,23 @@
                     }
                 }
             }
+        },
+        "resolve_thumbnail": {
+            "properties": {
+                "event_properties": {
+                    "type": "object",
+                    "properties": {
+                        "url_id": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        },
+                        "requested_size": {
+                            "type": "string",
+                            "index": "not_analyzed"
+                        }
+                    }
+                }
+            }
         }
     }
 }
