--- a/es_mappings/ocd_mapping_resolver.json
+++ b/es_mappings/ocd_mapping_resolver.json
@@ -14,6 +14,10 @@
                 "original_url": {
                     "type": "string",
                     "index": "no"
+                },
+                "content_type": {
+                    "type": "string",
+                    "index": "no"
                 }
             }
         }
