--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
--e git://github.com/mikeboers/PyAV.git@40b3cb85f1d1b1823fdb24dd0aaa01c14d005d3c
 celery[redis]==3.1.17
 elasticsearch==1.3.0
 click==2.1
@@ -18,3 +17,4 @@ sphinxcontrib-httpdomain==1.2.1
 sphinx-rtd-theme==0.1.6
 BeautifulSoup==3.2.1
 Pillow==2.7.0
+-e git+https://github.com/mikeboers/PyAV.git@40b3cb85f1d1b1823fdb24dd0aaa01c14d005d3c#egg=av
