--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python:
 install: "pip install -r requirements.txt"
 # command to run tests
 script: "./run_tests.sh"
-before_install: wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.2.deb && sudo dpkg -i --force-confnew elasticsearch-1.4.2.deb
+before_install: 
+  - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.2.deb && sudo dpkg -i --force-confnew elasticsearch-1.4.2.deb
+  - "./install_pyav_deps.sh"
 services:
   - elasticsearch
