--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 #  - "3.2"
 #  - "3.3"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: "pip install Cython==0.21.2 && pip install -r requirements.txt"
 # command to run tests
 script: "./run_tests.sh"
 before_install: 
