--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ install: "pip install Cython==0.21.2 && pip install -r requirements.txt"
 script: "./run_tests.sh"
 before_install: 
   - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.2.deb && sudo dpkg -i --force-confnew elasticsearch-1.4.2.deb
+  - "sudo ./install_pyav_deps.sh"
 services:
   - elasticsearch
