--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -5,12 +5,21 @@ pidfile=/opt/ocd/log/supervisord.pid
 stdout_logfile=/opt/ocd/log/supervisor.log
 stderr_logfile=/opt/ocd/log/supervisor.err
 
+; Production
 [program:frontend]
 command=bash -c "sleep 5 && cd /opt/ocd && uwsgi --socket 0.0.0.0:5000 --processes 8 -w manage"
 autostart=true
 autorestart=true
 stdout_logfile=/opt/ocd/log/frontend.log
 stderr_logfile=/opt/ocd/log/frontend.err
+
+; Development
+;[program:frontend]
+;command=bash -c "sleep 5 && cd /opt/duo && ./manage.py frontend runserver"
+;autostart=true
+;autorestart=true
+;stdout_logfile=/opt/ocd/log/frontend.log
+;stderr_logfile=/opt/ocd/log/frontend.err
 
 [program:celery]
 command=bash -c "sleep 10 && cd /opt/ocd && /opt/bin/celery --app=ocd_backend:celery_app worker --loglevel=info --concurrency=1"
