Add uwsgi touch reload

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -7,7 +7,7 @@ stderr_logfile=/opt/ocd/log/supervisor.err
 
 ; Production
 [program:frontend]
-command=bash -c "sleep 5 && cd /opt/ocd && uwsgi --socket 0.0.0.0:5000 --processes 8 -w manage"
+command=bash -c "sleep 5 && cd /opt/ocd && uwsgi --socket 0.0.0.0:5000 --processes 8 --touch-reload=/opt/ocd/uwsgi-touch-reload -w manage"
 autostart=true
 autorestart=true
 stdout_logfile=/opt/ocd/log/frontend.log
