--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ celery[redis]==3.1.17
 elasticsearch==1.3.0
 click==2.1
 coverage==4.0a1
+flexidate==1.0
 Flask==0.10.1
 Flask-Testing==0.4.2
 lxml==3.3.5
