--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -15,7 +15,7 @@ stderr_logfile=/opt/ocd/log/frontend.err
 
 ; Development
 ;[program:frontend]
-;command=bash -c "sleep 5 && cd /opt/duo && ./manage.py frontend runserver"
+;command=bash -c "sleep 5 && cd /opt/ocd && ./manage.py frontend runserver"
 ;autostart=true
 ;autorestart=true
 ;stdout_logfile=/opt/ocd/log/frontend.log
