--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
+sudo: required
 language: python
-python:
-  - "2.7"
-#  - "3.2"
-#  - "3.3"
-# command to install dependencies
-install: "pip install Cython==0.21.2 && pip install -r requirements.txt"
+services:
+  - docker
+before_install:
+  - docker build -t open-state/open-cultuur-data .
+  - docker run --name c-open-cultuur-data -v `pwd`:/opt/ori -p 9200:9200 -p 5000:5000 open-state/open-cultuur-data
 # command to run tests
 script: "./run_tests.sh"
-before_install: 
-  - wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-1.4.2.deb && sudo dpkg -i --force-confnew elasticsearch-1.4.2.deb
-  - "sudo ./install_pyav_deps.sh"
-services:
-  - elasticsearch
