Cached files were not served when not in DEBUG mode so add Nginx alias to directly serve cached files

--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -5,6 +5,11 @@ server {
   error_log /opt/nginx-load-balancer/log/api_error_log;
 
   location / { try_files $uri @app; }
+
+  location /media {
+    alias /usr/share/nginx/html/data/cache;
+  }
+
   location @app {
     # Production
     include uwsgi_params;
